fix some issues

--- a/canelita_store/templates/base.html
+++ b/canelita_store/templates/base.html
@@ -108,7 +108,6 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="fa fa-bars"></span>
                 </button>
-
                 <!-- Collapse -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <!-- Links -->
@@ -147,16 +146,12 @@
                                 Precios
                             </a>
                         </li>
-
-
-
                         <li class="nav-item ">
                             <a href="contact.html" class="nav-link">
                                 Contactenos
                             </a>
                         </li>
                     </ul>
-
                     <ul class="ml-lg-auto list-unstyled m-0">
                         <li><a href="#" class="btn btn-white btn-circled">Get a quote</a></li>
                     </ul>
@@ -175,7 +170,6 @@
 
 
 
-
     <footer class="section fixed-bottom" id="footer">
         <div class="overlay footer-overlay"></div>
         <!--Content -->
@@ -185,46 +179,11 @@
                     <div class="footer-widget">
                         <!-- Brand -->
                         <a href="#" class="footer-brand text-white">
-                            Rapoo
+                            Canelita Store
                         </a>
-                        <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Nosotros</p>
                     </div>
                 </div>
-
-                <div class="col-lg-3 ml-lg-auto col-sm-12">
-                    <div class="footer-widget">
-                        <h3>Account</h3>
-                        <!-- Links -->
-                        <ul class="footer-links ">
-                            <li>
-                                <a href="#">
-                                    Terms and conditions
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Privacy policy
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Affiliate services
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Help and support
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Frequently Asked Question
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
 
                 <div class="col-lg-2 col-sm-6">
                     <div class="footer-widget">
@@ -233,28 +192,22 @@
                         <ul class="footer-links ">
                             <li>
                                 <a href="#">
-                                    Services
+                                    Nosotros
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    About Us
+                                    Productos
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    Pricing
+                                    Precios
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    Products Shop
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    Contact
+                                    Contactenos
                                 </a>
                             </li>
                         </ul>
@@ -270,23 +223,28 @@
                             <li>
                             <a href="#"><i class="fab fa-twitter"></i>Twitter
                             </a></li>
-                            <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest
-                            </a></li>
-                            <li><a href="#"><i class="fab fa-linkedin"></i>linkedin
-                            </a></li>
                             <li><a href="#"><i class="fab fa-youtube"></i>YouTube
                             </a></li>
                         </ul>
                     </div>
                 </div>
+
+                <div class="col-lg-3 ml-lg-auto col-sm-12">
+                    <div class="footer-widget">
+                        <h3>Agradecimientos</h3>
+                        <!-- Links -->
+                    </div>
+                </div>
+
             </div> <!-- / .row -->
+
 
 
             <div class="row text-right pt-5">
                 <div class="col-lg-12">
                     <!-- Copyright -->
                     <p class="footer-copy ">
-                        &copy; Copyright <span class="current-year">Themefisher</span> All rights reserved.
+                        &copy; Copyright  All rights reserved.
                     </p>
                 </div>
             </div> <!-- / .row -->
