--- a/canelita_store/static/css/style.css
+++ b/canelita_store/static/css/style.css
@@ -3,7 +3,7 @@
 Author       : Dreambuzz
 Template Name: Rapoo - it solution landing template
 Author URI : https://themeforest.net/user/dreambuzz/portfolio
-Description: Rapoo,it, onepage,clean,bootstrap4, 
+Description: Rapoo,it, onepage,clean,bootstrap4,
 Description: Rapoo,it, onepage,clean,bootstrap4, responsive,modern,agency,landing template.
 Version      : 1.0
 * -------------------------------------------------  */
@@ -197,7 +197,7 @@ img {
 }
 
 .btn-white {
-  background: #fff;
+  background: #ffcc00;
   color: #212529;
 }
 
@@ -224,8 +224,8 @@ img {
 }
 
 .bg-primary, .btn-primary, .btn-white:hover {
-  background: #21c87a !important;
-  border-color: #21c87a !important;
+  background: #ffcc00 !important;
+  border-color: #ffcc00 !important;
   color: #fff;
 }
 
@@ -261,7 +261,7 @@ img {
 .bg-overlay:before {
   content: "";
   opacity: .55;
-  background-color: #212529;
+  background-color: #ffcc00;
 }
 
 .box-shadow {
@@ -647,7 +647,7 @@ PAGE BANNER
 .dropdown-item:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #21c87a;
+  background-color: #ffcc00;
 }
 
 /*----------------------
@@ -675,7 +675,7 @@ PAGE BANNER
 }
 
 /*-------------------------
- HOME -2 
+ HOME -2
 -----------------------------*/
 #banner {
   position: relative;
@@ -740,7 +740,7 @@ PAGE BANNER
   position: absolute;
   content: "";
   top: -27px;
-  background-color: #21c87a;
+  background-color: #ffcc00;
   opacity: .3;
   width: 80px;
   right: 70px;
