--- a/templates/home.html
+++ b/templates/home.html
@@ -13,18 +13,18 @@
                     <div class="main-banner">
                         <!-- Heading -->
                         <h1 class="display-4 mb-4 font-weight-normal">
-                            Canelita Store es lider en la idustria, en la venta de  productos chinos.
+                            Canelita Store es lider en la idustria
                         </h1>
 
                         <!-- Subheading -->
-                        <p class="lead mb-4">
-                           Canelita Store es lider en la idustria, en la venta de  productos chinos.
-                        </p>
+                        <h2 class="display-5 mb-4 font-weight-normal">
+                            en la venta de  productos orientales.
+                        </h2>
 
                         <!-- Button -->
                         <p class="mb-0">
-                            <a href="#" target="_blank" class="btn btn-primary btn-circled">
-                                Purchase now
+                            <a href={% url 'productos' %}  class="btn btn-primary btn-circled">
+                                Comprar ahora
                             </a>
                         </p>
                     </div>
@@ -32,7 +32,7 @@
 
                 <div class="col-lg-5 d-none d-lg-block">
                     <div class="banner-img-block">
-                        <img src="{% static 'images/banner-img-5.png' %}" alt="banner-img" class="img-fluid">
+                        <img src="{% static 'images/banner-img-4.png' %}" alt="banner-img" class="img-fluid">
                     </div>
                 </div>
             </div> <!-- / .row -->
