--- a/templates/base.html
+++ b/templates/base.html
@@ -134,7 +134,7 @@
                         </li>
                     </ul>
                     <ul class="ml-lg-auto list-unstyled m-0">
-                        <li><a href="#" class="btn btn-white btn-circled">Ingresar</a></li>
+                        <li><a href={% url 'sesion' %} class="btn btn-white btn-circled">Ingresar</a></li>
                     </ul>
                 </div> <!-- / .navbar-collapse -->
             </nav>
