se agrego funcionalidad de permisos de usuarios

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
                     <div class="main-banner">
                         <!-- Heading -->
                         <h1 class="display-4 mb-4 font-weight-normal">
-                            Canelita Store es lider en la idustria
+                            Canelita Store es lider en la industria
                         </h1>
 
                         <!-- Subheading -->
