--- a/templates/registro.html
+++ b/templates/registro.html
@@ -18,7 +18,8 @@
                             descuentos relanpagos y  mucho mas.
                             </h3>
                         </div>
-                        <form action="" method="POST"> {% csrf_token %}
+                        <form action="" method="POST">
+                            {% csrf_token %}
                             <div class="price-block">
                                     <h3 class="h6 small d-block text-uppercase price-block">
                                         Tu nombre
@@ -47,7 +48,7 @@
                                     </div>
                             </div>
                             <div class="price-block">
-                                <input name="submit" type="submit" class="btn btn-primary btn-circled" value="Send Message">
+                                <input name="submit" type="submit" class="btn btn-primary btn-circled" value="registrar">
                             </div>
                         </form>
                     </div>
