--- a/templates/base.html
+++ b/templates/base.html
@@ -134,7 +134,13 @@
                         </li>
                     </ul>
                     <ul class="ml-lg-auto list-unstyled m-0">
-                        <li><a href={% url 'sesion' %} class="btn btn-white btn-circled">Ingresar</a></li>
+                        <li>
+                            {% if user.is_authenticated %}
+                                    <a href="{% url 'logout'%}?next={{request.path}}" class="btn btn-white btn-circled">{{ user.get_username }} - Salir</a>
+                                {% else %}
+                                    <a href={% url 'login' %} class="btn btn-white btn-circled">ingresar</a>
+                            {% endif %}
+                        </li>
                     </ul>
                 </div> <!-- / .navbar-collapse -->
             </nav>
