--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,4 +1,4 @@
-{% extends "./base.html" %}
+{% extends "../base.html" %}
 {% load static %}
 {% block title %}Home{% endblock %}
 
@@ -12,7 +12,7 @@
                     <div class="main-banner">
                         <!-- Heading -->
                         <h2 class="display-4 mb-4 font-weight-normal">
-                            Gracias por tu registro {{ msj }}!
+                            Gracias por tu Ingreso {{ msj }}!
                         </h2>
                         <!-- Subheading -->
                         <h3 class="display-5 mb-4 font-weight-normal">
@@ -20,8 +20,8 @@
                         </h3>
                          <!-- Button -->
                         <p class="mb-0">
-                            <a href={% url 'login' %}  class="btn btn-primary btn-circled">
-                                Inicia sesion
+                            <a href={% url 'productos' %}  class="btn btn-primary btn-circled">
+                                Comprar ahora
                             </a>
                         </p>
                     </div>
