--- a/templates/colaboradores.html
+++ b/templates/colaboradores.html
@@ -10,7 +10,30 @@
         <div class="container">
             <div class="row  align-items-center">
                 <div class="col-md-12 col-lg-7 text-center text-lg-left">
-                    COLABORADORES
+
+                    {% if colaborador %}
+                        {% for colaborador in colaborador %}
+
+                            {% if forloop.first %}<div class="row">{% endif %}
+
+                            <div class="col-4">
+                                <div class="card h-100">
+                                 <img class="card-img-top" height="180" src="{{ colaborador.Imagen_Col.url }}" alt="{{ colaborador.Nom_Colaborador }}">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center">{{ colaborador.Nom_Colaborador }}</h5>
+                                        <hr />
+                                        <h6 class="card-subtitle">Carrera: {{ colaborador.Carrera }}</h6>
+                                    </div>
+                                </div>
+                            </div>
+
+                            {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
+                            {% if forloop.last %}</div>{% endif %}
+                        {% endfor %}
+                    {% else %}
+                        <div class="alrt alert-danger">No hay colaboradores registrados</div>
+                    {% endif %}
+
                 </div>
 
             </div> <!-- / .row -->
